tests/snapshots/test_error_scenarios__array_type_validation_error.snap
---
source: tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": "available",
      "expected_type": "array",
      "field_path": "status",
      "message": "\"available\" is not of type \"array\"",
      "parameter": "status",
      "type": "constraint-violation"
    }
  ]
}
