tests/snapshots/test_error_scenarios__enum_validation_error.snap
---
source: tests/test_error_scenarios.rs
expression: error_json
---
{
  "type": "validation-errors",
  "violations": [
    {
      "actual_value": [
        "invalid_status"
      ],
      "expected_type": "array",
      "field_path": "status/0",
      "message": "\"invalid_status\" is not one of [\"available\",\"pending\",\"sold\"]",
      "parameter": "status",
      "type": "constraint-violation"
    }
  ]
}
